<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:alphabeticShortcut="a"
        android:icon="@drawable/ic_action_note_add"
        android:numericShortcut="0"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:alphabeticShortcut="s"
                android:numericShortcut="1"
                android:title="@string/add_profile_methods_scan_qr_code"/>
            <item
                android:id="@+id/action_import_clipboard"
                android:alphabeticShortcut="c"
                android:numericShortcut="2"
                android:title="@string/action_import"/>
            <item
                android:id="@+id/action_import_file"
                android:alphabeticShortcut="f"
                android:numericShortcut="3"
                android:title="@string/action_import_file"/>
            <item
                android:id="@+id/action_manual_settings"
                android:alphabeticShortcut="m"
                android:numericShortcut="4"
                android:title="@string/add_profile_methods_manual_settings"/>
        </menu>
    </item>
    <item
        android:alphabeticShortcut="e"
        android:icon="@drawable/ic_file_file_upload"
        android:numericShortcut="1"
        android:title="@string/action_export_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_export_clipboard"
                android:alphabeticShortcut="c"
                android:numericShortcut="1"
                android:title="@string/action_export"/>
            <item
                android:id="@+id/action_export_file"
                android:alphabeticShortcut="f"
                android:numericShortcut="2"
                android:title="@string/action_export_file"/>
        </menu>
    </item>
</menu>
