<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_apply_all"
          android:title="@string/action_apply_all"
          android:alphabeticShortcut="a"
          android:numericShortcut="1"
          app:showAsAction="never"/>
    <item android:id="@+id/action_export"
          android:title="@string/action_export"
          android:icon="@drawable/ic_content_copy"
          app:showAsAction="ifRoom"
          android:alphabeticShortcut="e"
          android:numericShortcut="2"/>
    <item android:id="@+id/action_import"
          android:title="@string/action_import"
          android:icon="@drawable/ic_content_paste"
          app:showAsAction="ifRoom"
          android:alphabeticShortcut="i"
          android:numericShortcut="3"/>
</menu>
