<?xml version="1.0" encoding="utf-8"?>
<!-- Based on: https://github.com/android/platform_frameworks_base/blob/505e3ab/core/res/res/layout/simple_list_item_2.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_profile"
    android:focusable="true"
    android:nextFocusRight="@+id/edit"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        >

        <TextView
            android:id="@android:id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            tools:text="@string/profile_name"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share"
            android:focusable="true"
            android:nextFocusLeft="@+id/container"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_social_share"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:focusable="true"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_image_edit"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        >

        <TextView
            android:id="@android:id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/traffic"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/profile_plugin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            tools:text="@string/traffic"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>
    </RelativeLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
</LinearLayout>
